Revert lab action namechange

--- a/translations/items.es.xlf
+++ b/translations/items.es.xlf
@@ -6731,7 +6731,7 @@
       </notes>
       <segment>
         <source>Droge herstellen</source>
-        <target>Preparar un Twinoid 500Mg</target>
+        <target>Preparar un Estimulante</target>
       </segment>
     </unit>
     <unit id="0V2NUu6" name="In deinem Labor hast du {items_consume} in {items_spawn} umgewandelt.">
