Corrected ES "pila de papeles" description

--- a/translations/items.es.xlf
+++ b/translations/items.es.xlf
@@ -5084,7 +5084,7 @@
       </notes>
       <segment>
         <source>Ein Haufen Papierkram, das aus einer Verwaltung stammt.Nichts Interessantes, wobei manche Blätter Handnotizen erkennen lassen...</source>
-        <target>Un viejo álbum de fotos de escuela o algo así, hay muchos rostros casi borrados por el tiempo. Pero al ojearlo, un papel cae de su interior...</target>
+        <target>Muchos documentos de todo tipo, nada interesante. Espera, algunos llevan anotaciones curiosas...</target>
       </segment>
     </unit>
     <unit id="d9rguud" name="2d2e9ae">
